[project]
name = "secondbrain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chromadb>=1.5.5",
    "langchain>=1.2.14",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.1",
    "langchain-ollama>=1.0.1",
    "pillow>=12.2.0",
    "pypd>=1.1.0",
    "pypdf>=6.9.2",
]
